<resources>
    <string name="App_name">ban_jamere_bhai</string>

    <string name="button1">उपस्तिथि के लिए यहां क्लिक करे</string>
    <string name="button2">उपस्तिथि प्रणाली</string>
    <string name="button3">अवकाश प्रबंधन</string>
    <string name="button4">बच्चों की उपस्तिथि</string>
    <string name="button5">शिशु प्रपत्र</string>
    <string name="button6">बाल स्वास्थ ट्रैकिंग</string>
    <string name="button7">विद्यालय /आंगनवाणी संपर्क सूची</string>
    <string name="button8">रिफ्रेश करें</string>
    <string name="button9">सॉफ्टवेयर समस्या निदान हेतु</string>
    <string name="button10">कृपया तस्वीर लें</string>
    <string name="button">कर्मचारी अपना नाम चुनें</string>
    <string name="button11">select center name</string>
    <string name="button12">Select school name</string>
    <string name="textview">अगर आपका नाम सूची में नहीं है तो दर्ज करवाएं</string>
    <string name="radiobutton">Duty IN</string>
    <string name="button13">जमा करें</string>
    <string name="textview1">उपस्तिथि डैशबोर्ड</string>
    <string name="textview2">Attendance Saved in phone</string>
    <string name="textview3">Employee id</string>
    <string name="button15">अवकाश आवेदन करें</string>
    <string name="button16">अवकाश तालिका</string>
    <string name="textview7">अवकाश आवेदन करें</string>
    <string name="textview8">आरम्भ तिथि</string>
    <string name="button19">Touch to select date</string>
    <string name="textview9">अंतिम तिथि</string>
    <string name="button20">Touch to select date</string>
    <string name="textvie10">कारन</string>
    <string name="button21">जमा करें</string>
    <string name="textview12">छात्र सूचना</string>
    <string name="textview13">क्या विद्यालय चालू है</string>
    <string name="radiobutton3">हाँ</string>
    <string name="radiobutton4">नहीं</string>
    <string name="button23">Select Center type</string>
    <string name="button24">Select scgool name</string>
    <string name="todo2">TODO</string>
    <string name="button25">कृपया तस्वीर लें</string>
    <string name="student_present">Student Present</string>
    <string name="total_student">Total Student</string>
    <string name="button26">जमा  करें</string>
    <string name="textview16">विद्यार्थी की सूचना</string>
    <string name="textview15">Patient ID:193468774</string>
    <string name="button27">कृपया तस्वीर लें</string>
    <string name="hint2">नाम</string>
    <string name="hint3">आयु</string>
    <string name="hint4">पिता /अभिभावक का नाम</string>
    <string name="select_center_type1">Select Center Type</string>
    <string name="select_school_name1">Select School name</string>
    <string name="select_disease">Select Disease</string>
    <string name="male">MALE</string>
    <string name="famale">FAMALE</string>
    <string name="do_you_want_to_fillup_complete_form_right_now">Do you want to fillup complete form right now?</string>
    <string name="radiobbutton8">हाँ</string>
    <string name="radiobutton8">नहीं</string>
    <string name="name3">पिता/अभिभावक का नाम  </string>
    <string name="hint6">प्रधानध्यापक का नाम</string>
    <string name="hint7">प्रधानध्यापक संपर्क मोबाइल</string>
    <string name="hint8">ग्राम</string>
    <string name="hint9">रेफर सूचना</string>
    <string name="select_center1">Select Center</string>
    <string name="button29">अगली सन्दर्भ तिथि</string>
    <string name="button28">जमा करें</string>
    <string name="title_activity_main9">Main9Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pending_stdents_with_no_status_update">pending stdents with no status update</string>
    <string name="pending_stdents_with_status_update">pending stdents with status update</string>
    <string name="edittext29">छात्र सूचना</string>
    <string name="edittext28">परीक्षण अंतिम तिथि के भीतर</string>
    <string name="select_student_id">SELECT STUDENT ID</string>
    <string name="student_summary">Student Summary</string>
    <string name="btn1">कृपया तस्वीर लें</string>
    <string name="text">क्या रोग में बदलाव की जरुरत है</string>
    <string name="rdb1">हाँ</string>
    <string name="rdb2">नहीं</string>
    <string name="text1">ग्राम को सूचित करें</string>
    <string name="rdb3">स्वयं का केंद्र</string>
    <string name="rdb4">अन्य केंद्र</string>
    <string name="rdb5">पूर्ण</string>
    <string name="touch_to_select_date">touch to select date</string>
    <string name="select_refferal_center">Select refferal Center</string>
    <string name="edittext10">रेफर सूचना</string>
    <string name="btn5">जमा करें</string>
    <string name="edt1">छात्र मार्गन</string>
    <string name="edt2">परीक्षण अंतिम तिथि समाप्त</string>
    <string name="sn_1">SN.= 1</string>
    <string name="id_1001">ID=1001</string>
    <string name="a_uttar_pradesh_gorakhpur_gorakhpur_gola">A,uttar pradesh|gorakhpur|gorakhpur|gola</string>
    <string name="duty_in_out">Duty IN/OUT</string>
    <string name="date">DATE</string>
    <string name="todo3">TODO</string>
    <string name="duty_out">Duty OUT</string>
    <string name="contact_list">Contact List</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No</string>
    <string name="todo4">TODO</string>
    <string name="username4">Username</string>
    <string name="password3">Password</string>
    <string name="register_here3">Register Here.</string>
    <string name="todo5">TODO</string>
    <string name="todo">TODO</string>
    <string name="login6">Login</string>
    <string name="todo7">TODO</string>
    <string name="fatehpur_rbsk">FATEHPUR RBSK</string>
    <string name="tod">TODO</string>
    <string name="vdai_bio_sec_pvt_ltd"><u>vdai bio sec pvt ltd</u></string>
    <string name="todo21">TODO</string>
    <string name="welcome_to_rbsk_app"><u>Welcome To RBSK App</u></string>
    <string name="i_agree_to_share_my_name_email_phone_number_interest_demografic_details_etc_with_the_rbsk_app_i_understand_this_usage_will_be_based_on_the">I agree to share my name,email,phone number,interest demografic details,etc.with the RBSK App.I understand this usage will be based on the</string>
    <string name="privacy_policy"><u>Privacy policy</u></string>
    <string name="forgot_password"><u>forgot password?</u></string>


</resources>
