<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Material.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:text="@string/edittext29"
           android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edittext28"
            android:gravity="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner24"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog"
            android:background="@drawable/spinnercustom"
            android:text="@string/select_student_id"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/student_summary"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="273dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo4"
            android:scaleType="centerCrop"
            app:srcCompat="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/button22"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/text"
            android:textColor="@android:color/background_dark"
            android:textSize="25sp"
            android:textStyle="bold" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/rdb1"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/rdb2"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/text1"
            android:textSize="25sp"
            android:textStyle="bold" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/rdb3"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/rdb4"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/rdb5"/>
        </RadioGroup>

        <Button
            android:id="@+id/button37"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/touch_to_select_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner30"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/select_refferal_center"
            android:spinnerMode="dialog"
            android:textSize="25sp"
            android:background="@drawable/spinnercustom"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:hint="@string/edittext10"
            android:inputType="text"
            android:textSize="25sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn7"
            android:background="@drawable/buttonmaker"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn5"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="25sp"/>
    </LinearLayout>
</ScrollView>
