<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main7Activity"
    android:background="@drawable/images">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/textview12"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/textview13"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton3"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton4"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner20"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:spinnerMode="dialog"
        android:layout_above="@+id/spinner21"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-221dp"
        android:text="@string/button23" />

    <Spinner
        android:id="@+id/spinner21"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:spinnerMode="dialog"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="221dp"
        android:text="@string/button24" />

    <ImageView
        android:id="@+id/imageiew2"
        android:layout_width="295dp"
        android:layout_height="208dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="113dp"
        android:contentDescription="@string/todo2"
        android:scaleType="centerCrop"
        app:srcCompat="@android:color/holo_blue_light" />

    <Button
        android:id="@+id/button222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="186dp"
        android:text="@string/button25"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageiew2"
        android:layout_marginTop="-113dp"
        android:ems="10"
        android:hint="@string/student_present" />

    <EditText
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/editText"
        android:ems="10"
        android:hint="@string/total_student" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonmaker"
        android:text="@string/button26" />


</RelativeLayout>
