<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Material.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:text="@string/edt1"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edt2"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner34"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinnercustom"
            android:text="@string/select_student_id"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/student_summary"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_red_light"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="#00ffee"
            android:text="@string/text"
            android:textSize="25sp"
            android:textStyle="bold" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/rdb1"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/rdb2"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#00ffd9"
            android:text="@string/text1"
            android:textSize="25sp"
            android:textStyle="bold" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/rdb3"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/rdb4"/>
        </RadioGroup>
        <Button
            android:id="@+id/button40"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/touch_to_select_date"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/spinner33"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/select_refferal_center"
            android:spinnerMode="dialog"
            android:background="@drawable/spinnercustom"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="30dp"
            android:hint="@string/edittext10"
            android:inputType=""
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/btn5"
            android:background="@drawable/buttonmaker"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
